# Fire-Engine

./: .gitignore  CMakeLists.txt  README.md
FireEngine/: CMakeLists.txt  FireEngine.cpp  FireEngine.h
FireEngine/ECS/: CMakeLists.txt  Entity.h  EntityManager.cpp  EntityManager.h
test/: CMakeLists.txt  example.cpp  main.cpp
test/ECS/: CMakeLists.txt  Entitytest.cpp
